Let build pass.

--- a/.jscsrc
+++ b/.jscsrc
@@ -11,8 +11,8 @@
   "disallowKeywordsOnNewLine": ["else"],
   "disallowTrailingWhitespace": true,
   "requireLineFeedAtFileEnd": true,
-  "validateIndentation": 2,
-  "validateQuoteMarks": "'",
+  "validateIndentation": 4,
+  /*"validateQuoteMarks": "'",*/
   "validateJSDoc": {
     "checkParamNames": true,
     "requireParamTypes": true
