--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "js_ctci",
+  "name": "js-ctci",
   "description": "ctci in JavaScript.",
   "version": "0.0.0",
   "homepage": "http://www.codethoughts.info",
-  "bugs": "https://github.com/puffsun/js_ctci/issues",
+  "bugs": "https://github.com/puffsun/js-ctci/issues",
   "license": "MIT",
   "main": "lib/js-ctci.js",
   "author": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/puffsun/js_ctci"
+    "url": "https://github.com/puffsun/js-ctci"
   },
   "keywords":[],
   "dependencies": {
