--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
     "type": "git",
     "url": "https://github.com/puffsun/js-ctci"
   },
-  "keywords":[],
+  "keywords": [],
   "dependencies": {
     "lodash": "3.10.1",
     "debug": "2.2.0"
   },
   "devDependencies": {
-    "jasmine-node" : "1.3.1",
+    "coveralls": "^2.11.1",
     "gulp": "^3.8.8",
-    "gulp-util": "^3.0.1",
     "gulp-bump": "^0.1.11",
+    "gulp-istanbul": "^0.5.0",
+    "gulp-jasmine": "^2.0.1",
     "gulp-jscs": "^1.1.2",
     "gulp-jshint": "^1.8.4",
-    "gulp-mocha": "^1.1.0",
-    "gulp-istanbul": "^0.5.0",
-    "coveralls": "^2.11.1",
-    "should": "^4.0.4",
-    "jshint-stylish": "^0.4.0",
     "gulp-load-plugins": "^0.6.0",
-    "gulp-plumber": "^0.6.5"
+    "gulp-plumber": "^0.6.5",
+    "gulp-util": "^3.0.1",
+    "jasmine-node": "1.3.1",
+    "jshint-stylish": "^0.4.0",
+    "should": "^4.0.4"
   },
   "scripts": {
     "coveralls": "gulp test && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
