Cleanup and restructure project.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,17 +1,18 @@
 {
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "sub": true,
-  "undef": true,
-  "unused": true,
-  "boss": true,
-  "eqnull": true,
-  "node": true,
-  "globals": {
+  "curly"   : true,
+  "eqeqeq"  : true,
+  "immed"   : true,
+  "latedef" : true,
+  "newcap"  : true,
+  "noarg"   : true,
+  "sub"     : true,
+  "undef"   : true,
+  "unused"  : true,
+  "boss"    : true,
+  "eqnull"  : true,
+  "node"    : true,
+  "jasmine" : true,
+  "globals" : {
     "describe"   : false,
     "it"         : false,
     "before"     : false,
