--- a/package.json
+++ b/package.json
@@ -23,17 +23,16 @@
   "devDependencies": {
     "coveralls": "^2.11.1",
     "gulp": "^3.8.8",
-    "gulp-bump": "^0.1.11",
+    "gulp-bump": "^0.1.13",
     "gulp-istanbul": "^0.5.0",
     "gulp-jasmine": "^2.0.1",
-    "gulp-jscs": "^1.1.2",
+    "gulp-jscs": "^1.6.0",
     "gulp-jshint": "^1.8.4",
     "gulp-load-plugins": "^0.6.0",
-    "gulp-plumber": "^0.6.5",
+    "gulp-plumber": "^0.6.6",
     "gulp-util": "^3.0.1",
-    "jasmine-node": "1.3.1",
-    "jshint-stylish": "^0.4.0",
-    "should": "^4.0.4"
+    "jasmine-node": "^1.14.5",
+    "jshint-stylish": "^0.4.0"
   },
   "scripts": {
     "coveralls": "gulp test && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
