--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coveralls": "^2.11.1",
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.13",
+    "gulp-debug": "^2.1.0",
     "gulp-istanbul": "^0.5.0",
     "gulp-jasmine": "^2.0.1",
     "gulp-jscs": "^1.6.0",
